--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,10 +6,14 @@
   box-sizing: border-box;
 }
 
+html, body, body > div  {
+  height: 100%;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   background-color: #141414;
-  color: #fff;
+  color: white;
 }
 
 a {
